<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserActivity"
    android:padding="20dp">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/btnBack_description"
            android:src="@drawable/back_btn"
            android:scaleType="centerInside"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/userInfo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_below="@+id/header"
        android:layout_marginBottom="50dp"
        android:orientation="vertical"
        android:padding="20dp"
        android:gravity="center">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/userAvatar"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/img_cute_girl"
            android:contentDescription="@string/ivUserAvatar_description"
            app:shapeAppearanceOverlay="@style/CircleImageView"
            app:strokeColor="@color/white"
            app:strokeWidth="2dp"/>

        <EditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:inputType="text"
            android:autofillHints="username"
            android:hint="@string/etUserName"
            style="@style/EditTextStyle"/>

        <EditText
            android:id="@+id/userAbout"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="15dp"
            android:inputType="textMultiLine"
            android:importantForAutofill="no"
            android:hint="@string/etUserInfo"
            style="@style/EditTextStyle"
            android:gravity="start|top"
            android:maxLength="100"/>

    </LinearLayout>

</RelativeLayout>