<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NotesActivity">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:background="@color/primary"
            android:gravity="center_vertical">

            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/btnBack_description"
                android:src="@drawable/back_btn"
                android:scaleType="centerInside"
                android:padding="10dp"/>

            <TextView
                android:id="@+id/tvNotes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tvNotes"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="24sp"/>

            <ImageButton
                android:id="@+id/btnSearch"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/btnSearch_description"
                android:src="@drawable/search_btn"
                android:scaleType="centerInside"
                android:padding="10dp"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvNotes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/header"
        android:padding="8dp"
        android:clipToPadding="false"
        android:scrollbars="vertical" />

</RelativeLayout>
